--- a/OrderEat-Merchant/Classes/OrderList/View/OrderList.storyboard
+++ b/OrderEat-Merchant/Classes/OrderList/View/OrderList.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Bii-T1-EZb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Bii-T1-EZb">
     <device id="ipad10_5" orientation="landscape" layout="fullscreen" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -46,13 +46,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ardela - 082210814486" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ba3-VL-Ewj">
-                                                    <rect key="frame" x="15" y="51" width="257" height="23"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rp 20.000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kH8-uM-Vbd">
-                                                    <rect key="frame" x="280" y="51" width="292" height="23"/>
+                                                    <rect key="frame" x="15" y="51" width="482" height="23"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -69,43 +63,29 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w9Y-2T-fAi">
-                                                    <rect key="frame" x="399" y="103" width="299" height="30"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <state key="normal" title="Food Is Ready"/>
-                                                    <connections>
-                                                        <action selector="foodReadyBtnPressed:" destination="oSM-uS-UC2" eventType="touchUpInside" id="rl8-mv-wZa"/>
-                                                    </connections>
-                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="bottomMargin" secondItem="6bo-0A-e22" secondAttribute="bottom" constant="6" id="3Xi-Ry-9UR"/>
                                                 <constraint firstItem="ba3-VL-Ewj" firstAttribute="top" secondItem="xnW-fQ-nYH" secondAttribute="topMargin" constant="40" id="Bca-GQ-L2l"/>
                                                 <constraint firstItem="ba3-VL-Ewj" firstAttribute="leading" secondItem="KMP-WW-mMz" secondAttribute="leading" id="GnN-Sd-w9X"/>
-                                                <constraint firstItem="kH8-uM-Vbd" firstAttribute="leading" secondItem="ba3-VL-Ewj" secondAttribute="trailing" constant="8" id="KEv-JD-ArS"/>
-                                                <constraint firstItem="kH8-uM-Vbd" firstAttribute="leading" secondItem="wyT-Bj-p7U" secondAttribute="leading" id="LhF-rm-1bC"/>
-                                                <constraint firstItem="kH8-uM-Vbd" firstAttribute="trailing" secondItem="wyT-Bj-p7U" secondAttribute="trailing" id="OY8-5P-7gv"/>
                                                 <constraint firstItem="ba3-VL-Ewj" firstAttribute="leading" secondItem="6bo-0A-e22" secondAttribute="leading" id="Rwf-N7-lKu"/>
                                                 <constraint firstItem="bqN-tI-2tc" firstAttribute="leading" secondItem="xnW-fQ-nYH" secondAttribute="leading" constant="15" id="U7Q-LM-MOZ"/>
-                                                <constraint firstItem="ba3-VL-Ewj" firstAttribute="trailing" secondItem="bqN-tI-2tc" secondAttribute="trailing" id="W9C-Fw-qdX"/>
+                                                <constraint firstItem="ba3-VL-Ewj" firstAttribute="trailing" secondItem="bqN-tI-2tc" secondAttribute="trailing" constant="225" id="W9C-Fw-qdX"/>
                                                 <constraint firstItem="KMP-WW-mMz" firstAttribute="top" secondItem="ba3-VL-Ewj" secondAttribute="bottom" constant="5" id="XTY-dq-3fY"/>
-                                                <constraint firstItem="ba3-VL-Ewj" firstAttribute="trailing" secondItem="6bo-0A-e22" secondAttribute="trailing" id="Y3m-xY-BuR"/>
+                                                <constraint firstItem="ba3-VL-Ewj" firstAttribute="trailing" secondItem="6bo-0A-e22" secondAttribute="trailing" constant="225" id="Y3m-xY-BuR"/>
                                                 <constraint firstItem="ba3-VL-Ewj" firstAttribute="leading" secondItem="bqN-tI-2tc" secondAttribute="leading" id="afg-Wb-nKn"/>
                                                 <constraint firstItem="wyT-Bj-p7U" firstAttribute="leading" secondItem="bqN-tI-2tc" secondAttribute="trailing" constant="8" id="cmB-MS-cVI"/>
                                                 <constraint firstAttribute="trailing" secondItem="wyT-Bj-p7U" secondAttribute="trailing" constant="163.5" id="eSB-PV-OYP"/>
                                                 <constraint firstItem="6bo-0A-e22" firstAttribute="top" secondItem="KMP-WW-mMz" secondAttribute="bottom" constant="8" symbolic="YES" id="h4R-gW-wbP"/>
-                                                <constraint firstItem="ba3-VL-Ewj" firstAttribute="trailing" secondItem="KMP-WW-mMz" secondAttribute="trailing" id="u1W-48-sqJ"/>
+                                                <constraint firstItem="ba3-VL-Ewj" firstAttribute="trailing" secondItem="KMP-WW-mMz" secondAttribute="trailing" constant="225" id="u1W-48-sqJ"/>
                                                 <constraint firstItem="bqN-tI-2tc" firstAttribute="centerY" secondItem="wyT-Bj-p7U" secondAttribute="centerY" id="uBa-4g-ccF"/>
-                                                <constraint firstItem="ba3-VL-Ewj" firstAttribute="centerY" secondItem="kH8-uM-Vbd" secondAttribute="centerY" id="vD3-4X-JI8"/>
                                                 <constraint firstItem="bqN-tI-2tc" firstAttribute="top" secondItem="xnW-fQ-nYH" secondAttribute="topMargin" id="wce-70-9eb"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="customerDetails" destination="ba3-VL-Ewj" id="ulJ-SD-xfA"/>
-                                            <outlet property="foodisReadyButton" destination="w9Y-2T-fAi" id="QoG-9J-5BZ"/>
                                             <outlet property="orderDate" destination="KMP-WW-mMz" id="oZc-YB-qCT"/>
                                             <outlet property="orderNo" destination="bqN-tI-2tc" id="k7i-NH-lia"/>
-                                            <outlet property="orderPrice" destination="kH8-uM-Vbd" id="57y-Uc-ouz"/>
                                             <outlet property="orderStatus" destination="6bo-0A-e22" id="sip-Ia-iRd"/>
                                             <outlet property="pickUpTime" destination="wyT-Bj-p7U" id="uFj-Pr-tCh"/>
                                         </connections>
