--- a/OrderEat-Merchant/Classes/Checkout/View/Checkout.storyboard
+++ b/OrderEat-Merchant/Classes/Checkout/View/Checkout.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8gz-LW-9sm">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8gz-LW-9sm">
     <device id="ipad10_5" orientation="landscape" layout="fullscreen" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,19 +19,25 @@
                                 <rect key="frame" x="20" y="20" width="1072" height="150"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Order No: | Pick Up Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DZo-Xn-B9K">
-                                        <rect key="frame" x="20" y="20" width="1032" height="22"/>
+                                        <rect key="frame" x="20" y="4" width="1032" height="22"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name - Phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hkg-G6-hey">
-                                        <rect key="frame" x="20" y="52" width="1032" height="21"/>
+                                        <rect key="frame" x="20" y="36" width="1032" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="phL-np-Qzr">
-                                        <rect key="frame" x="20" y="83" width="1032" height="22"/>
+                                        <rect key="frame" x="20" y="67" width="1032" height="22"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UIh-4D-3wM">
+                                        <rect key="frame" x="20" y="99" width="1032" height="22"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -39,15 +45,19 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstItem="DZo-Xn-B9K" firstAttribute="top" secondItem="iOH-K7-nck" secondAttribute="top" constant="20" id="4Tz-Ir-QNg"/>
+                                    <constraint firstItem="DZo-Xn-B9K" firstAttribute="top" secondItem="iOH-K7-nck" secondAttribute="top" constant="4" id="4Tz-Ir-QNg"/>
+                                    <constraint firstItem="UIh-4D-3wM" firstAttribute="leading" secondItem="iOH-K7-nck" secondAttribute="leading" constant="20" id="9WA-57-og7"/>
                                     <constraint firstItem="DZo-Xn-B9K" firstAttribute="leading" secondItem="iOH-K7-nck" secondAttribute="leading" constant="20" id="Ecf-Sx-ELJ"/>
+                                    <constraint firstItem="UIh-4D-3wM" firstAttribute="top" secondItem="phL-np-Qzr" secondAttribute="bottom" constant="10" id="H95-qq-z6C"/>
+                                    <constraint firstAttribute="bottom" secondItem="UIh-4D-3wM" secondAttribute="bottom" constant="29" id="Jzf-u9-Txj"/>
                                     <constraint firstAttribute="trailing" secondItem="hkg-G6-hey" secondAttribute="trailing" constant="20" id="QWA-za-RTO"/>
                                     <constraint firstItem="phL-np-Qzr" firstAttribute="top" secondItem="hkg-G6-hey" secondAttribute="bottom" constant="10" id="T8d-Gw-N34"/>
                                     <constraint firstItem="hkg-G6-hey" firstAttribute="top" secondItem="DZo-Xn-B9K" secondAttribute="bottom" constant="10" id="TYN-gC-aLo"/>
                                     <constraint firstItem="hkg-G6-hey" firstAttribute="leading" secondItem="iOH-K7-nck" secondAttribute="leading" constant="20" id="Vca-30-dtN"/>
                                     <constraint firstAttribute="trailing" secondItem="DZo-Xn-B9K" secondAttribute="trailing" constant="20" id="WVF-rF-XpM"/>
+                                    <constraint firstAttribute="trailing" secondItem="UIh-4D-3wM" secondAttribute="trailing" constant="20" id="X8I-aj-lop"/>
                                     <constraint firstItem="phL-np-Qzr" firstAttribute="leading" secondItem="iOH-K7-nck" secondAttribute="leading" constant="20" id="ctN-Jx-u8e"/>
-                                    <constraint firstAttribute="bottom" secondItem="phL-np-Qzr" secondAttribute="bottom" constant="45" id="hRB-O4-zlA"/>
+                                    <constraint firstAttribute="bottom" secondItem="phL-np-Qzr" secondAttribute="bottom" constant="61" id="hRB-O4-zlA"/>
                                     <constraint firstAttribute="trailing" secondItem="phL-np-Qzr" secondAttribute="trailing" constant="20" id="qRi-mm-P5z"/>
                                     <constraint firstAttribute="height" constant="150" id="wfl-9x-5vx"/>
                                 </constraints>
@@ -88,6 +98,12 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tSa-UU-e6K">
+                                                    <rect key="frame" x="144" y="19" width="908" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="Fvw-Nu-peV" secondAttribute="trailing" constant="20" id="5x7-kl-TAY"/>
@@ -95,12 +111,15 @@
                                                 <constraint firstItem="d5M-bf-2fz" firstAttribute="leading" secondItem="I2W-HI-i6u" secondAttribute="trailing" constant="20" id="BEE-OB-YfK"/>
                                                 <constraint firstItem="rMY-gJ-Fe4" firstAttribute="leading" secondItem="I2W-HI-i6u" secondAttribute="trailing" constant="20" id="DeP-EH-msl"/>
                                                 <constraint firstItem="I2W-HI-i6u" firstAttribute="leading" secondItem="s4a-zH-6Jq" secondAttribute="leading" constant="20" id="ERN-Tj-B57"/>
+                                                <constraint firstAttribute="trailing" secondItem="tSa-UU-e6K" secondAttribute="trailing" constant="20" id="GNK-Sa-gR1"/>
                                                 <constraint firstItem="Fvw-Nu-peV" firstAttribute="leading" secondItem="I2W-HI-i6u" secondAttribute="trailing" constant="20" id="JJT-5f-b7P"/>
+                                                <constraint firstItem="tSa-UU-e6K" firstAttribute="top" secondItem="s4a-zH-6Jq" secondAttribute="topMargin" constant="8" id="Qyn-iT-rKh"/>
                                                 <constraint firstItem="d5M-bf-2fz" firstAttribute="top" secondItem="s4a-zH-6Jq" secondAttribute="topMargin" constant="8" id="TJW-xm-mIv"/>
                                                 <constraint firstAttribute="trailing" secondItem="rMY-gJ-Fe4" secondAttribute="trailing" constant="20" id="cQW-qy-aty"/>
                                                 <constraint firstItem="rMY-gJ-Fe4" firstAttribute="top" secondItem="Fvw-Nu-peV" secondAttribute="bottom" constant="10" id="clr-8J-3Oh"/>
                                                 <constraint firstItem="I2W-HI-i6u" firstAttribute="centerY" secondItem="s4a-zH-6Jq" secondAttribute="centerY" id="ejM-x4-9cH"/>
                                                 <constraint firstItem="Fvw-Nu-peV" firstAttribute="top" secondItem="d5M-bf-2fz" secondAttribute="bottom" constant="3" id="eo2-lc-7a5"/>
+                                                <constraint firstItem="tSa-UU-e6K" firstAttribute="leading" secondItem="I2W-HI-i6u" secondAttribute="trailing" constant="20" id="v3f-Nq-j2f"/>
                                                 <constraint firstItem="I2W-HI-i6u" firstAttribute="top" secondItem="s4a-zH-6Jq" secondAttribute="top" constant="20" id="vG7-Vf-NTG"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -109,6 +128,7 @@
                                             <outlet property="itemNameLabel" destination="d5M-bf-2fz" id="zla-E2-qdr"/>
                                             <outlet property="itemPriceLabel" destination="rMY-gJ-Fe4" id="fnV-Mf-nf6"/>
                                             <outlet property="itemQtyLabel" destination="Fvw-Nu-peV" id="aaS-CM-Lmo"/>
+                                            <outlet property="itemSubtotalLabel" destination="tSa-UU-e6K" id="KUb-2S-nuy"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="priceDetailsTableViewCell" rowHeight="45" id="4Zo-FJ-okA" customClass="PriceDetailsTableViewCell" customModule="Eativa_Merchant" customModuleProvider="target">
@@ -279,6 +299,7 @@
                         <outlet property="headerView" destination="iOH-K7-nck" id="GXR-Qu-6KN"/>
                         <outlet property="nameAndPhoneLabel" destination="hkg-G6-hey" id="blY-Ds-1P2"/>
                         <outlet property="orderNoAndPickUpTimeLabel" destination="DZo-Xn-B9K" id="9uh-kN-TVH"/>
+                        <outlet property="orderStatus" destination="UIh-4D-3wM" id="r7h-kX-ohc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sjn-dQ-KuN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
