--- a/OrderEat-Merchant/Classes/OrderList/View/OrderList.storyboard
+++ b/OrderEat-Merchant/Classes/OrderList/View/OrderList.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Bii-T1-EZb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Bii-T1-EZb">
     <device id="ipad10_5" orientation="landscape" layout="fullscreen" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -118,7 +118,7 @@
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemGroupedBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="vsZ-AU-Bgd" firstAttribute="leading" secondItem="e8l-7y-hDb" secondAttribute="leading" id="LIa-R1-LKg"/>
                             <constraint firstAttribute="trailing" secondItem="vsZ-AU-Bgd" secondAttribute="trailing" id="OBL-Uf-D3t"/>
@@ -152,7 +152,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" id="1sb-o9-BiH" customClass="MasterOrderListTableViewCell" customModule="Eativa_Merchant" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" id="1sb-o9-BiH" customClass="MasterOrderListTableViewCell" customModule="Eativa_Merchant" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="55.5" width="320" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1sb-o9-BiH" id="yGj-0m-upK">
@@ -160,35 +160,19 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Incoming" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="beK-r8-2BV">
-                                            <rect key="frame" x="16" y="11" width="141" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LXu-mk-wbM">
-                                            <rect key="frame" x="264" y="9.5" width="24" height="24"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="24" id="FHT-gp-zI1"/>
-                                                <constraint firstAttribute="width" constant="24" id="dWy-Ut-cD8"/>
-                                            </constraints>
+                                            <rect key="frame" x="16" y="11" width="70.5" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="LXu-mk-wbM" firstAttribute="leading" secondItem="beK-r8-2BV" secondAttribute="trailing" constant="107" id="Nqd-RE-sav"/>
-                                        <constraint firstItem="LXu-mk-wbM" firstAttribute="centerY" secondItem="beK-r8-2BV" secondAttribute="centerY" id="kez-WE-vkw"/>
                                         <constraint firstItem="beK-r8-2BV" firstAttribute="top" secondItem="yGj-0m-upK" secondAttribute="top" constant="11" id="lJM-E8-Z9J"/>
                                         <constraint firstItem="beK-r8-2BV" firstAttribute="leading" secondItem="yGj-0m-upK" secondAttribute="leading" constant="16" id="y1F-Yz-xqX"/>
                                     </constraints>
                                 </tableViewCellContentView>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="LXu-mk-wbM" secondAttribute="trailing" constant="32" id="PkJ-Bv-uBa"/>
-                                </constraints>
                                 <connections>
                                     <outlet property="tipeLabel" destination="beK-r8-2BV" id="umq-pt-icC"/>
-                                    <outlet property="tipeNotifLabel" destination="LXu-mk-wbM" id="yNa-Pc-9iO"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
