--- a/OrderEat-Merchant/Classes/Authentication/Signin/View/Signin.storyboard
+++ b/OrderEat-Merchant/Classes/Authentication/Signin/View/Signin.storyboard
@@ -18,70 +18,78 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg-signin-merchant" translatesAutoresizingMaskIntoConstraints="NO" id="Mvw-Hj-BjD">
                                 <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg-orange" translatesAutoresizingMaskIntoConstraints="NO" id="uva-8W-NL1">
-                                <rect key="frame" x="573" y="0.0" width="539" height="834"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tZr-b1-pgi">
+                                <rect key="frame" x="556" y="0.0" width="556" height="834"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg-orange" translatesAutoresizingMaskIntoConstraints="NO" id="uva-8W-NL1">
+                                        <rect key="frame" x="0.0" y="0.0" width="556" height="834"/>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="ek3-ub-hcj">
+                                        <rect key="frame" x="83" y="368" width="390" height="178"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zhr-dy-lFc">
+                                                <rect key="frame" x="0.0" y="0.0" width="390" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cDY-gH-wP2">
+                                                <rect key="frame" x="0.0" y="74" width="390" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BcP-xq-cl9">
+                                                <rect key="frame" x="25" y="148" width="340" height="30"/>
+                                                <color key="backgroundColor" red="0.85882352939999995" green="0.89411764709999997" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="340" id="NM9-ZL-Vek"/>
+                                                </constraints>
+                                                <state key="normal" title="Signin">
+                                                    <color key="titleColor" red="0.96470588239999999" green="0.52156862749999999" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="signinTapped:" destination="GLp-mV-GeZ" eventType="touchUpInside" id="sVx-ZF-zKD"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="cDY-gH-wP2" firstAttribute="leading" secondItem="ek3-ub-hcj" secondAttribute="leading" id="VWM-by-saD"/>
+                                            <constraint firstAttribute="trailing" secondItem="Zhr-dy-lFc" secondAttribute="trailing" id="Yv9-Yn-GBt"/>
+                                            <constraint firstAttribute="trailing" secondItem="cDY-gH-wP2" secondAttribute="trailing" id="f8U-Ys-5F0"/>
+                                            <constraint firstItem="Zhr-dy-lFc" firstAttribute="leading" secondItem="ek3-ub-hcj" secondAttribute="leading" id="hx7-0A-lIi"/>
+                                            <constraint firstAttribute="width" constant="390" id="xmB-f8-nQc"/>
+                                        </constraints>
+                                    </stackView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-merchant" translatesAutoresizingMaskIntoConstraints="NO" id="bH7-Gn-J8H">
+                                        <rect key="frame" x="178" y="64" width="200" height="264"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="bH7-Gn-J8H" secondAttribute="height" multiplier="191:252" id="00K-Lm-yXT"/>
+                                            <constraint firstAttribute="width" constant="200" id="dKj-oV-knr"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="539" id="c30-nc-Tew"/>
-                                    <constraint firstAttribute="height" constant="834" id="kyk-xa-VUE"/>
+                                    <constraint firstItem="bH7-Gn-J8H" firstAttribute="centerX" secondItem="tZr-b1-pgi" secondAttribute="centerX" id="3Wq-SO-3V5"/>
+                                    <constraint firstItem="uva-8W-NL1" firstAttribute="leading" secondItem="tZr-b1-pgi" secondAttribute="leading" id="5P6-1b-8R4"/>
+                                    <constraint firstItem="ek3-ub-hcj" firstAttribute="centerY" secondItem="tZr-b1-pgi" secondAttribute="centerY" constant="40" id="5ni-Tk-Avy"/>
+                                    <constraint firstItem="ek3-ub-hcj" firstAttribute="centerX" secondItem="tZr-b1-pgi" secondAttribute="centerX" id="CLS-uB-cq3"/>
+                                    <constraint firstAttribute="bottom" secondItem="uva-8W-NL1" secondAttribute="bottom" id="JgQ-0Z-R84"/>
+                                    <constraint firstItem="uva-8W-NL1" firstAttribute="top" secondItem="tZr-b1-pgi" secondAttribute="top" id="fk0-id-JAk"/>
+                                    <constraint firstAttribute="trailing" secondItem="uva-8W-NL1" secondAttribute="trailing" id="pHW-S4-Fsx"/>
+                                    <constraint firstItem="ek3-ub-hcj" firstAttribute="top" secondItem="bH7-Gn-J8H" secondAttribute="bottom" constant="40" id="uLc-N8-wYN"/>
                                 </constraints>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-merchant" translatesAutoresizingMaskIntoConstraints="NO" id="bH7-Gn-J8H">
-                                <rect key="frame" x="745.5" y="85" width="191" height="262"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="262" id="PS9-YN-4fX"/>
-                                    <constraint firstAttribute="width" constant="191" id="u3I-X2-eBU"/>
-                                </constraints>
-                            </imageView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zhr-dy-lFc" customClass="CustomTextField" customModule="Eativa_Merchant" customModuleProvider="target">
-                                <rect key="frame" x="646" y="400" width="390" height="34"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="5lJ-sK-qua"/>
-                                    <constraint firstAttribute="width" constant="390" id="gM2-Va-1Zc"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cDY-gH-wP2" customClass="CustomTextField" customModule="Eativa_Merchant" customModuleProvider="target">
-                                <rect key="frame" x="646" y="462" width="390" height="34"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="qxm-L3-Zcg"/>
-                                    <constraint firstAttribute="width" constant="390" id="tAS-n6-Kxt"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BcP-xq-cl9">
-                                <rect key="frame" x="668" y="533" width="346" height="46"/>
-                                <color key="backgroundColor" red="0.85882352939999995" green="0.89411764709999997" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="346" id="4zc-lc-bn8"/>
-                                    <constraint firstAttribute="height" constant="46" id="Iuj-kV-Crc"/>
-                                </constraints>
-                                <state key="normal" title="Button">
-                                    <color key="titleColor" red="0.96470588239999999" green="0.52156862749999999" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="signinTapped:" destination="GLp-mV-GeZ" eventType="touchUpInside" id="sVx-ZF-zKD"/>
-                                </connections>
-                            </button>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="bH7-Gn-J8H" firstAttribute="top" secondItem="qQl-pH-qFc" secondAttribute="top" constant="85" id="6C4-gd-ikT"/>
-                            <constraint firstItem="uva-8W-NL1" firstAttribute="trailing" secondItem="qQl-pH-qFc" secondAttribute="trailing" id="6rg-EB-bYO"/>
-                            <constraint firstItem="Mvw-Hj-BjD" firstAttribute="bottom" secondItem="axv-eI-Kd4" secondAttribute="bottom" id="7yQ-0y-ACb"/>
-                            <constraint firstItem="Zhr-dy-lFc" firstAttribute="centerX" secondItem="axv-eI-Kd4" secondAttribute="centerX" constant="285" id="Cah-7A-Yah"/>
-                            <constraint firstItem="bH7-Gn-J8H" firstAttribute="centerX" secondItem="axv-eI-Kd4" secondAttribute="centerX" constant="285" id="DEg-0n-YVo"/>
-                            <constraint firstItem="cDY-gH-wP2" firstAttribute="centerX" secondItem="axv-eI-Kd4" secondAttribute="centerX" constant="285" id="EXL-uT-KLd"/>
-                            <constraint firstItem="BcP-xq-cl9" firstAttribute="top" secondItem="cDY-gH-wP2" secondAttribute="bottom" constant="37" id="LHn-r6-BFZ"/>
-                            <constraint firstItem="Zhr-dy-lFc" firstAttribute="top" secondItem="bH7-Gn-J8H" secondAttribute="bottom" constant="53" id="PBm-SC-pqh"/>
-                            <constraint firstItem="cDY-gH-wP2" firstAttribute="top" secondItem="Zhr-dy-lFc" secondAttribute="bottom" constant="28" id="eh9-EM-cpk"/>
-                            <constraint firstItem="uva-8W-NL1" firstAttribute="top" secondItem="qQl-pH-qFc" secondAttribute="top" id="fWh-n0-07j"/>
-                            <constraint firstItem="Mvw-Hj-BjD" firstAttribute="top" secondItem="qQl-pH-qFc" secondAttribute="top" id="gwc-Fc-7nD"/>
-                            <constraint firstItem="Mvw-Hj-BjD" firstAttribute="leading" secondItem="qQl-pH-qFc" secondAttribute="leading" id="lup-O5-94X"/>
-                            <constraint firstItem="uva-8W-NL1" firstAttribute="bottom" secondItem="axv-eI-Kd4" secondAttribute="bottom" id="rIg-dz-xwP"/>
-                            <constraint firstItem="BcP-xq-cl9" firstAttribute="centerX" secondItem="axv-eI-Kd4" secondAttribute="centerX" constant="285" id="s4k-4X-HH5"/>
-                            <constraint firstItem="Mvw-Hj-BjD" firstAttribute="trailing" secondItem="qQl-pH-qFc" secondAttribute="trailing" id="xvN-m1-tzE"/>
+                            <constraint firstItem="Mvw-Hj-BjD" firstAttribute="leading" secondItem="qQl-pH-qFc" secondAttribute="leading" id="9O3-RS-sXk"/>
+                            <constraint firstItem="Mvw-Hj-BjD" firstAttribute="top" secondItem="axv-eI-Kd4" secondAttribute="top" id="AMm-Dd-lvt"/>
+                            <constraint firstItem="tZr-b1-pgi" firstAttribute="width" secondItem="Mvw-Hj-BjD" secondAttribute="width" multiplier="0.5" id="Btl-b1-rd4"/>
+                            <constraint firstAttribute="bottom" secondItem="tZr-b1-pgi" secondAttribute="bottom" id="PLq-vj-obb"/>
+                            <constraint firstAttribute="trailing" secondItem="tZr-b1-pgi" secondAttribute="trailing" id="c6q-f8-z3g"/>
+                            <constraint firstItem="Mvw-Hj-BjD" firstAttribute="trailing" secondItem="qQl-pH-qFc" secondAttribute="trailing" id="faB-Sz-KgL"/>
+                            <constraint firstItem="tZr-b1-pgi" firstAttribute="top" secondItem="axv-eI-Kd4" secondAttribute="top" id="vLB-xa-N2l"/>
+                            <constraint firstItem="Mvw-Hj-BjD" firstAttribute="bottom" secondItem="axv-eI-Kd4" secondAttribute="bottom" id="wTH-R6-Bcf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="qQl-pH-qFc"/>
                     </view>
